채팅 기록 기능 추가 및 요청-응답 흐름 업데이트
- 사용자 채팅을 유지하기 위해 `ChatSession` 및 `ChatMessage` 엔티티를 도입했습니다.
- 채팅 기록 관리를 위해 `ChatHistoryController` 및 `ChatHistoryService`를 추가했습니다.
- 세션 생성, 메시지 저장 및 동적 페르소나 지원을 처리하도록 `ChatService`를 확장했습니다.
- `userId`, `sessionId` 및 반환된 세션 ID를 응답에 포함하도록 `ChatDtos`를 업데이트했습니다.
- `User`, `ChatSession` 및 `ChatMessage`에 대한 JPA 저장소를 구성했습니다.
- `build.gradle`에 JWT 종속성과 함께 H2 및 PostgreSQL 지원을 추가했습니다.